--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,79 @@
 # Prerequisites
 *.d
 
-# Compiled Object files
-*.slo
-*.lo
+# Object files
 *.o
+*.ko
 *.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
 
 # Precompiled Headers
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# Libraries
 *.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
 
 # Executables
 *.exe
 *.out
 *.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# exclude the user's make.inc file
+make.inc
+# Exclude swap files
+.*.swp
+# Exclude the results file
+results.txt
+my.txt
+mkl.txt
+ref.txt
+# Exclude personal todo file
+todo.md
+tex/*pdf
+tex/*thm
+.ipynb_checkpoints/
+
+# Exclude tex auxilary files
+*aux
+*bbl
+*blg
+*log
+*toc
+*snm
+*nav
+
+# Exclude temp file
+ParseTimeFileW.ipynb
